--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "body-parser": "^1.15.2",
     "bootstrap": "^3.3.7",
     "express": "^4.14.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.24.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.0",
     "react-redux": "^4.4.5",
